Update java version to 17.